hphp/hack/test/typecheck/method_variance/method_variance_check.php.exp
File "method_variance_check.php", line 3, characters 16-16:
Covariance or contravariance is not allowed in type parameter of method or function. (Typing[4313])
File "method_variance_check.php", line 4, characters 16-16:
Covariance or contravariance is not allowed in type parameter of method or function. (Typing[4313])
File "method_variance_check.php", line 5, characters 16-16:
Covariance or contravariance is not allowed in type parameter of method or function. (Typing[4313])
File "method_variance_check.php", line 6, characters 16-16:
Covariance or contravariance is not allowed in type parameter of method or function. (Typing[4313])
File "method_variance_check.php", line 6, characters 20-21:
Covariance or contravariance is not allowed in type parameter of method or function. (Typing[4313])
File "method_variance_check.php", line 7, characters 16-16:
Covariance or contravariance is not allowed in type parameter of method or function. (Typing[4313])
File "method_variance_check.php", line 15, characters 25-25:
Covariance or contravariance is not allowed in type parameter of method or function. (Typing[4313])
File "method_variance_check.php", line 16, characters 25-25:
Covariance or contravariance is not allowed in type parameter of method or function. (Typing[4313])
File "method_variance_check.php", line 17, characters 25-25:
Covariance or contravariance is not allowed in type parameter of method or function. (Typing[4313])
File "method_variance_check.php", line 18, characters 25-25:
Covariance or contravariance is not allowed in type parameter of method or function. (Typing[4313])
File "method_variance_check.php", line 18, characters 29-30:
Covariance or contravariance is not allowed in type parameter of method or function. (Typing[4313])
File "method_variance_check.php", line 19, characters 25-25:
Covariance or contravariance is not allowed in type parameter of method or function. (Typing[4313])
